--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,23 @@
+# ============================================
+# Peptide Management System - Requirements
+# ============================================
+
+# GUI Framework
+flet>=0.24.0
+
+# Database
+# SQLite è built-in in Python, non serve installare nulla
+
+# Environment Management
+python-dotenv>=1.0.0
+
 # Core dependencies
 click>=8.0.0
 rich>=13.0.0
 tabulate>=0.9.0
 python-dateutil>=2.8.0
 
-# Optional dependencies
+# Data Analysis (Optional)
 pandas>=2.0.0
 matplotlib>=3.7.0
 
@@ -12,3 +25,8 @@ matplotlib>=3.7.0
 pytest>=7.4.0
 black>=23.0.0
 flake8>=6.0.0
+
+# ============================================
+# Installation:
+# pip install -r requirements.txt
+# ============================================
