--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,9 @@ pytest>=7.4.0
 black>=23.0.0
 flake8>=6.0.0
 
+# Environment
+python-dotenv>=1.0.0
+
 # ============================================
 # Installation:
 # pip install -r requirements.txt
