--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,14 @@ python-dateutil>=2.8.0
 pandas>=2.0.0
 matplotlib>=3.7.0
 
+# Janoshik Supplier Ranking (LLM providers)
+openai>=1.0.0
+anthropic>=0.40.0
+google-generativeai>=0.8.0
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+pillow>=10.0.0
+
 # Development dependencies
 pytest>=7.4.0
 black>=23.0.0
