feat: Complete Janoshik supplier ranking system with data layer
Major Components:
- File Organization: Moved 31 Janoshik scripts to scripts/janoshik/ directory
- Certificate Processing: GPT-4o LLM extraction for 452 certificates (100% success)
  * Progress tracking with ETA and cert/s speed indicators
  * Duplicate detection pre-check (cost savings, skips already processed)
  * Fixed database schema mismatches in certificate/ranking models
- Analytics Infrastructure:
  * JanoshikAnalytics class with 7 query methods (pandas DataFrames)
  * JanoshikViewsLogic MVC layer with TimeWindow enum, 3 dataclass types
  * Test scripts: analyze_market.py, test_views_logic.py
- Suppliers Integration:
  * Migration 011: Added 8 Janoshik metric columns to suppliers table
  * sync_suppliers.py: Populates suppliers with quality scores
  * 74 suppliers synchronized (avg quality 85.98/100)

View Architecture (ready for GUI):
1. Supplier Rankings: Filter by time window, quality badges
2. Peptide Rankings: Trending analysis by test count
3. Vendor Search: Find best supplier for specific peptide with autocomplete

Database Migrations:
- 006: Create janoshik_certificates and supplier_rankings tables
- 007: Add missing columns (endotoxin_eu_per_mg, peptide_name mapping)
- 011: Enhance suppliers table with Janoshik metrics

Technical Details:
- LLM Provider: OpenAI GPT-4o Vision API (~ for 452 certs @ 6.7s each)
- Quality Score Formula: 60% purity + 30% consistency + 10% volume/recency
- MVC Pattern: Analytics (SQL) -> ViewsLogic (business rules) -> GUI (pending)

Next Phase: GUI integration for three Janoshik views

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@
 data/production/*
 data/development/*
 
+# Janoshik certificate images (binary files, too large for git)
+data/janoshik/images/
+data/janoshik/temp/
+data/janoshik/*.htm
+data/janoshik/*.html
+
 # Backup files
 backups/
 *.backup
