--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,13 @@ backups/
 *.backup
 *.backup_*
 
-# Environment files con dati sensibili
+# Environment files con dati sensibili (API KEYS!)
+.env
+.env.local
 .env.production
 .env.development
-.env.local
+.env.staging
+.env.*.local
 
 # Python
 __pycache__/
