--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,9 @@ requests>=2.31.0
 beautifulsoup4>=4.12.0
 pillow>=10.0.0
 
+# Notifications
+plyer>=2.1.0
+
 # Development dependencies
 pytest>=7.4.0
 black>=23.0.0
